rendering is broked

--- a/config/tesseract-config.yml
+++ b/config/tesseract-config.yml
@@ -1,6 +1,6 @@
 initialPlaylist: Color Cube
 initialPlayState: loop_scene
-stageType: bitty
+stageType: cubotron
 
 # this is temporary.  eventually we'll just have a list of controllers or whatever makes sense, e.g.
 # controllers:
