--- a/config/tesseract-config.yml
+++ b/config/tesseract-config.yml
@@ -1,6 +1,6 @@
 initialPlaylist: Cubotron
 initialPlayState: loop_scene
-stageType: cubotron
+stageType: bitty
 
 # this is temporary.  eventually we'll just have a list of controllers or whatever makes sense, e.g.
 # controllers:
